Added authentication to aws image
